tests/NormalTests/paczka1/fuzzy1/61090701.err
Error in line 12: Tpj3jxn S999 20,5
Error in line 4: 2wuu0eWFn7 A186 83,0
Error in line 17: yU1mhojKR S745 66,2
Error in line 18: 2wuu0eWFn7 S999 93,1
Error in line 31: 2wuu0eWFn7 A186 8,6
Error in line 32: ZhsXkc A662 3,8
